--- a/css/markdown.css
+++ b/css/markdown.css
@@ -8,7 +8,7 @@
   text-size-adjust: 100%;
   color: #333;
   overflow: hidden;
-  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
+  font-family: 'lucida grande','lucida sans unicode',lucida,helvetica,'Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;
   font-size: 16px;
   line-height: 1.6;
   word-wrap: break-word;
