--- a/css/markdown.css
+++ b/css/markdown.css
@@ -361,7 +361,7 @@
 
 .markdown-body ul,
 .markdown-body ol {
-  padding-left: 2em;
+  padding-left: 3em;
 }
 
 .markdown-body ul ul,
@@ -475,7 +475,7 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  background-color: #f7f7f7;
+  border: 1px solid #c7bfbf;
   border-radius: 3px;
 }
 
