--- a/css/markdown.css
+++ b/css/markdown.css
@@ -8,7 +8,7 @@
   text-size-adjust: 100%;
   color: #333;
   overflow: hidden;
-  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
+  font-family: 'lucida grande','lucida sans unicode',lucida,helvetica,'Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;
   font-size: 16px;
   line-height: 1.6;
   word-wrap: break-word;
@@ -361,7 +361,7 @@
 
 .markdown-body ul,
 .markdown-body ol {
-  padding-left: 2em;
+  padding-left: 3em;
 }
 
 .markdown-body ul ul,
@@ -475,7 +475,7 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  background-color: #f7f7f7;
+  border: 1px solid #c7bfbf;
   border-radius: 3px;
 }
 
