--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,12 @@ body {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 20%;
+    width: 25%;
     height: 100%;
     overflow-x: auto;
     overflow-y: scroll;
-    
+    max-width: 320px;
+
     background-color: #fafafa;
 }
 
@@ -55,7 +56,7 @@ body {
 #content {
     position: absolute;
     top: 0;
-    left: 20%;
+    left: 25%;
     bottom: 0;
     right: 0;
     width: 80%;
@@ -65,5 +66,5 @@ body {
 
 #article {
     width: 80%;
-    margin: 10px auto;
+    padding: 10px 5%;
 }
