--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ body {
     left: 25%;
     bottom: 0;
     right: 0;
-    width: 80%;
+    width: auto;
     height: 100%;
     overflow: auto;
 }
