--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,2 +1,30 @@
 @import "./layout.scss";
 @import "./markdown.scss";
+
+#file-list {
+    color: #666666;
+    background-color: #fafafa;
+    border-right: 1px solid #e3e6e8;
+
+    #repo-logo {
+        font-size: 1.4em;
+        padding: 2px 8px;
+        color: #cac8c8;
+        background-color: #2d2d2d;
+        text-align: center;
+    }
+
+    ul {
+        padding: 0 5px;
+        margin: 10px;
+    }
+
+    li.file-item {
+        list-style: none;
+        padding: 5px;
+
+        :hover {
+            color: #008cff;
+        }
+    }
+}
