--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,30 +1,32 @@
-$contentTop : 32px;
+$navWidth : 20%;
+$contentWidth : 80%;
 
 body {
     padding: 0;
     margin: 0;
 }
 
-#header {
-    position: absolute;
-    top: 0;
-    bottom: $contentTop;
-    width: 100%;
-    height: $contentTop;
+.content {
+    padding: 2px 16px;
+}
+
+#repo-logo {
+    height: 100px;
+    line-height: 100px;
 }
 
 #file-list {
     position: fixed;
-    top: $contentTop;
+    top: 0;
     bottom: 0;
     left: 0;
-    width: 20%;
+    width: $navWidth;
 }
 
 #file-content {
     position: absolute;
-    top: $contentTop;
+    top: 0;
     bottom: 0;
-    left: 20%;
-    width: 80%;
+    left: $navWidth;
+    width: $contentWidth;
 }
