--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,3 +1,4 @@
+$headerHeight : 40px;
 $navWidth : 20%;
 $contentWidth : 80%;
 
@@ -10,23 +11,30 @@ body {
     padding: 2px 16px;
 }
 
-#repo-logo {
-    height: 100px;
-    line-height: 100px;
+#header {
+    position: fixed;
+    top: 0;
+    bottom: $headerHeight;
+    left: 0;
+    width: 100%;
+    height: $headerHeight;
+    z-index: 100;
 }
 
 #file-list {
     position: fixed;
-    top: 0;
+    top: $headerHeight;
     bottom: 0;
     left: 0;
     width: $navWidth;
+    z-index: 90;
 }
 
 #file-content {
     position: absolute;
-    top: 0;
+    top: $headerHeight;
     bottom: 0;
     left: $navWidth;
     width: $contentWidth;
+    z-index: 80;
 }
