--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -23,7 +23,7 @@ $fileItemColor : #666666;
     overflow: auto;
 
     ul {
-        padding: 10px 5px;
+        padding: 10px 0;
         margin: 0px;
     }
 
@@ -39,6 +39,10 @@ $fileItemColor : #666666;
                 color: #008cff;
             }
         }
+    }
+
+    li.active {
+        background: #e3e6e8;
     }
 }
 
