add code highlight

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,6 @@
 @import "./layout.scss";
 @import "./markdown.scss";
+@import "./highlight.scss";
 
 * {
     font-family: 'lucida grande','lucida sans unicode',lucida,helvetica,'Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;
