--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -26,7 +26,7 @@ $fileItemPadding : 5px;
     overflow: auto;
 
     ul {
-        padding: 10px 0;
+        padding: 0 0;
         margin: 0px;
     }
 
@@ -52,6 +52,7 @@ $fileItemPadding : 5px;
     #file-list-filter-input {
         display: block;
         width: 90%;
+        padding: 2px;
         margin: 5px auto;
         height: $fileItemHeight;
         border-radius: 2px;
