--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,7 @@
 @import "./layout.scss";
 @import "./markdown.scss";
 @import "./highlight.scss";
+@import "./print.scss";
 
 $fileItemColor: #666666;
 $fileItemHeight: 24px;
